--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "ethers": "^6.8.1",
     "hardhat": "^2.19.0"
   },
   "dependencies": {
