--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.40",
     "framer-motion": "^9.0.1",
+    "fullpage.js": "^4.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.8.0"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.8.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
