--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.40",
+    "flickity": "^2.3.0",
     "framer-motion": "^9.0.1",
     "fullpage.js": "^4.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flickity-component": "^4.0.7",
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
