--- a/contracts/package.json
+++ b/contracts/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@chainlink/contracts": "^0.8.0",
     "@openzeppelin/contracts": "^5.0.0",
+    "@pythnetwork/pyth-sdk-solidity": "^2.3.0",
     "dotenv": "^16.3.1"
   }
 }
